--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -32,7 +32,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      HUGO_VERSION: 0.141.1
+      HUGO_VERSION: 0.143.1-0270364a347b2ece97e0321782b21904db515ecc+extended
     steps:
       - name: Install Hugo CLI
         run: |
