--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,6 @@
 baseURL = 'https://example.org/'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
-theme = 'ananke'
+theme = 'gallery'
+[markup.goldmark.renderer]
+unsafe= true
