added gumroad social

--- a/hugo.toml
+++ b/hugo.toml
@@ -9,4 +9,5 @@ unsafe= true
     github = "https://github.com/SuzukaDev"
     youtube = "https://www.youtube.com/@SuzukaKa"
     twitter = "https://x.com/SuzukaKDev"
+    gumroad = "https://orb91.gumroad.com/"
     email = "mailto:suzukakadev@gmail.com"
