added itchio to social icons

--- a/hugo.toml
+++ b/hugo.toml
@@ -10,4 +10,5 @@ unsafe= true
     youtube = "https://www.youtube.com/@SuzukaKa"
     twitter = "https://x.com/SuzukaKDev"
     gumroad = "https://orb91.gumroad.com/"
+    itchio = "https://suzuka.itch.io/"
     email = "mailto:suzukakadev@gmail.com"
