--- a/hugo.toml
+++ b/hugo.toml
@@ -14,5 +14,6 @@ theme = 'gallery'
 unsafe= true
 [params]
   is_debug = true
+  # is_debug = false
   keywords = ['gamedev', 'gamedeveloper', 'engeneer', 'multimedia engineer', '2D art', '3D art', 'music production', 'alicante', 'spain']
   socials = ['github', 'twitter', 'youtube','gumroad', 'itchio', 'email']
