--- a/hugo.toml
+++ b/hugo.toml
@@ -6,7 +6,7 @@ theme = 'gallery'
 
 # Multilingual
 # INFO https://gohugo.io/content-management/multilingual/
-defaultContentLanguage = 'en' #NOTE This must match 'default_language'
+defaultContentLanguage = 'en'
 # defaultContentLanguage = 'es'
 defaultContentLanguageInSubdir = true
 # defaultContentLanguageInSubdir = false
@@ -46,8 +46,6 @@ defaultContentLanguageInSubdir = true
 [markup.goldmark.renderer]
 unsafe= true
 [params]
-  # REFACTOR delete default_language
-  # default_language = 'en' # NOTE this must match 'defaultContentLanguage'
   articles_author = 'Suzuka Ka'
   # is_debug = false # Set to false for relase
   is_debug = true
