--- a/hugo.toml
+++ b/hugo.toml
@@ -49,6 +49,8 @@ unsafe= true
   articles_author = 'Suzuka Ka'
   # is_debug = false # Set to false for relase
   is_debug = true
+
+  show_galeries_with_same_article_tag = true # If True, when seeing a certain article tag, it will show at the end the galeries that contains that tag you are browsing
   keywords = ['gamedev', 'gamedeveloper', 'engineer', 'multimedia engineer', '2D art', '3D art', 'music production', 'alicante', 'spain']
   socials = ['github', 'twitter', 'youtube','gumroad', 'itchio', 'email']
 
