--- a/hugo.toml
+++ b/hugo.toml
@@ -47,8 +47,8 @@ defaultContentLanguageInSubdir = true
 unsafe= true
 [params]
   articles_author = 'Suzuka Ka'
-  # is_debug = false # Set to false for relase
-  is_debug = true
+  is_debug = false # Set to false for relase
+  # is_debug = true
 
   show_galeries_with_same_article_tag = true # If True, when seeing a certain article tag, it will show at the end the galeries that contains that tag you are browsing
   keywords = ['gamedev', 'gamedeveloper', 'engineer', 'multimedia engineer', '2D art', '3D art', 'music production', 'alicante', 'spain']
