audios_default_author

--- a/hugo.toml
+++ b/hugo.toml
@@ -49,6 +49,7 @@ unsafe= true
 [params]
   galleries_author = 'Suzuka Ka'
   articles_author = 'Suzuka Ka'
+  audios_default_author = 'Suzuka Ka'
   articles_card_type = 2 # options: 1 (simple) or 2 (with more info)
   # is_debug = false # Set to false for relase
   # is_debug = true
