lfs ignore big file

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 # *.mp3 filter=lfs diff=lfs merge=lfs -text
 # *.mp4 filter=lfs diff=lfs merge=lfs -text
-content/galleries/art/2d/pixel-art/images/hidden/care[[:space:]]alinear/webp/care-transition-25s-scaled.mp4 filter=lfs diff=lfs merge=lfs -text
+
+# content/galleries/art/2d/pixel-art/images/hidden/care[[:space:]]alinear/webp/care-transition-25s-scaled.mp4 filter=lfs diff=lfs merge=lfs -text
