--- a/hugo.toml
+++ b/hugo.toml
@@ -57,6 +57,43 @@ unsafe= true
 block = true
 title = true
 
+
+# https://gohugo.io/configuration/related-content/
+[related]
+  includeNewer = true
+  threshold = 80
+  # threshold = 0
+  # toLower = false
+  toLower = true
+  [[related.indices]]
+    applyFilter = false
+    cardinalityThreshold = 0
+    name = 'keywords'
+    pattern = ''
+    # toLower = false
+    toLower = true
+    type = 'basic'
+    weight = 100
+  [[related.indices]]
+    applyFilter = false
+    cardinalityThreshold = 0
+    name = 'date'
+    pattern = ''
+    # toLower = false
+    toLower = true
+    type = 'basic'
+    weight = 10
+  [[related.indices]]
+    applyFilter = false
+    cardinalityThreshold = 0
+    name = 'tags'
+    pattern = ''
+    # toLower = false
+    toLower = true
+    type = 'basic'
+    weight = 80
+
+
 [params]
   galleries_author = 'Suzuka Ka'
   articles_author = 'Suzuka Ka'
