--- a/hugo.toml
+++ b/hugo.toml
@@ -102,7 +102,8 @@ title = true
   articles_card_type = 2 # options: 1 (simple) or 2 (with more info)
   # is_debug = false # Set to false for relase
   # is_debug = true
-  is_site_under_development = true 
+  # is_site_under_development = true 
+  is_site_under_development = false 
 
   show_galeries_with_same_article_tag = true # If True, when seeing a certain article tag, it will show at the end the galeries that contains that tag you are browsing
 
